# -Reinforcement-Learning-for-Dynamic-UAV-Energy-Efficient-Path-Planning-in-IoT-Sensor-Networks.

./: .coverage  .gitignore  .rayignore  Dockerfile  LICENSE  README.md  debug_load.py  main.py  paper.tex  pyproject.toml  setup_pod.sh  visualize_policy.py
MSc_and_BEng_Dissertation_Template_the_University_of_Manchester_EEE__2_/: abbreviations.tex  abstract.tex  acknowledgements.tex  conclusions.tex  introduction.tex  literature_review.tex  main.aux  main.bbl  main.bcf  main.blg  main.run.xml  main.tex  main.toc  main_compile.aux  main_compile.bcf  main_compile.blg  main_compile.run.xml  main_compile.toc  main_compile.xmpdata  main_new.aux  main_new.bbl  main_new.bcf  main_new.blg  main_new.run.xml  main_new.toc  methodology.tex  pdfa.xmpi  preliminaries.tex  project_management.tex  references.bib  results.tex  uom_eee_dissertation_casson.cls
MSc_and_BEng_Dissertation_Template_the_University_of_Manchester_EEE__2_/appendices/: additional_figures.tex  cpd_log.tex  gantt_chart.tex  hyperparams.tex  project_outline.tex  repository.tex  risk_assessment.tex  sim_to_real.tex
MSc_and_BEng_Dissertation_Template_the_University_of_Manchester_EEE__2_/conclusions/: conclusions_content.tex  future_work.tex
MSc_and_BEng_Dissertation_Template_the_University_of_Manchester_EEE__2_/introduction/: aims_objectives.tex  background_motivation.tex  contributions.tex  report_structure.tex
MSc_and_BEng_Dissertation_Template_the_University_of_Manchester_EEE__2_/literature_review/: ai_native_networking.tex  existing_approaches.tex  lorawan_scalability.tex  summary_positioning.tex
notebooks/: analysis.ipynb
paper/: paper.tex
presentation/: presentation.tex
src/environment/: __init__.py  (+4 more)
tests/: README.md  test_iot_sensors.py  test_uav.py
(+845 files in other folders)
